Don't sync pref which controls the password manager to mobile.

Chrome will start sync prefs on mobile. It's not desired behaviour for the password manager pref, because it collides with the prefs reconciliation.

BUG=622620

Review-Url: https://codereview.chromium.org/2084033002
Cr-Commit-Position: refs/heads/master@{#401592}

Former-commit-id: 9352a69e3b8cbf81e7a46dd9ea07a7e05ece94ee